--- a/Map-Viewer/.classpath
+++ b/Map-Viewer/.classpath
@@ -7,33 +7,20 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX SDK">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-11.0.2">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javaFX SDK">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-	<classpathentry kind="src" path="src"/>
-	<classpathentry including="Maps/|Maps/testmap.map|Sprites/|Sprites/diamond.gif|Sprites/items.gif|Sprites/playersprites.gif|Sprites/sparkle.gif|Tilesets/|Tilesets/testtileset.gif" kind="src" path="Resources"/>
->>>>>>> 41ef2b2fa88ac9abb01f757d12682c43ab5bfb2e
-=======
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javaFX SDK">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
->>>>>>> ead9dad3ea0afe0110dd17d2b3fe17e8b09ad662
 	<classpathentry kind="output" path="bin"/>
 </classpath>
