--- a/Map-Viewer/.classpath
+++ b/Map-Viewer/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry including="Maps/|Maps/testmap.map|Sprites/|Sprites/diamond.gif|Sprites/items.gif|Sprites/playersprites.gif|Sprites/sparkle.gif|Tilesets/|Tilesets/testtileset.gif" kind="src" path="Resources"/>
+	<classpathentry including="Buttons/|Buttons/Diamondhunterlogo.png|Buttons/PlaceAxe.png|Buttons/PlaceBoat.png|Buttons/Play.png|Buttons/ResetButton.png|MapsFX/|MapsFX/testmap.map|SpritesFX/|SpritesFX/items.gif|SpritesFX/playersprites.gif|TilesetsFX/|TilesetsFX/testtileset.gif" kind="src" path="Resources"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -28,6 +28,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX Library">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/Diamond Hunter">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
