--- a/Map-Viewer/.classpath
+++ b/Map-Viewer/.classpath
@@ -2,6 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry including="Buttons/|Buttons/Diamondhunterlogo.png|Buttons/PlaceAxe.png|Buttons/PlaceBoat.png|Buttons/Play.png|Buttons/ResetButton.png|MapsFX/|MapsFX/testmap.map|SpritesFX/|SpritesFX/items.gif|SpritesFX/playersprites.gif|TilesetsFX/|TilesetsFX/testtileset.gif" kind="src" path="Resources"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Diamond Hunter">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -17,11 +22,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFx">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -32,10 +32,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/Diamond Hunter">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
